--- a/styles.scss
+++ b/styles.scss
@@ -10,9 +10,12 @@
 .square {
   width: 20px;
   height: 20px;
-  //background: blue;
 }
 
 .snake {
   background: green;
+}
+
+.apple {
+  background: red;
 }
